1. Fixed CANCEL title, 2. Made save card switch visible in case if no appearance customization provided

--- a/goSellSDK/UI/Internal/Resources/TapNavigationView.xib
+++ b/goSellSDK/UI/Internal/Resources/TapNavigationView.xib
@@ -91,7 +91,7 @@
                             <color key="textColor" red="0.32549019610000002" green="0.32549019610000002" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8JV-Jp-WTt" customClass="MirrorableView" customModule="goSellSDK">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8JV-Jp-WTt">
                             <rect key="frame" x="315" y="0.0" width="60" height="66"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6MS-h1-gh2">
